umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@accldraw_2-methylallyldioxo-sulfane.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 11, col 15"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 11, col 15"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C4O2S
    atom_count: 7
    bond_count: 6
    extended_atoms: 0
    extended_bonds: 4
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C4O2S
    atom_count: 7
    bond_count: 6
    extended_atoms: 0
    extended_bonds: 4
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
